[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/KnockInput.gd" type="Script" id=1]

[node name="KnockInput" type="Control"]
script = ExtResource( 1 )

[node name="LetterTimer" type="Timer" parent="."]
one_shot = true

[node name="WordTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="LetterTimer" to="." method="_on_LetterTimer_timeout"]
[connection signal="timeout" from="WordTimer" to="." method="_on_WordTimer_timeout"]
